java 8 fix